Fix initialization and UI layering issues
- Add favicon link to prevent 404 errors
- Fix Giphy API response handling with proper error handling and fallbacks
- Update video initialization to use modern getUserMedia API with proper timing
- Fix z-index layering: video (bottom), typing (middle), UI elements (top)
- Ensure BadTV shader effects are active from start with proper initialization
- Fix face mesh overlay alignment with video display
- Update camera aspect ratio to match viewport
- Add overlay size calculation to match Three.js video plane dimensions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ernest Azile</title>
 	<meta charset='utf-8'>
+	<link rel="icon" href="data:,">
 	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	 <meta http-equiv="refresh" content="1200">
