Add weighted scoring views and dashboard data mode toggle (Addendum A)
Implement two-tier weighted scoring: confirmed reactions weighted 1.0,
rejected/legacy weighted 0.25. Dashboard cycles through ALL/WEIGHTED/CONFIRMED
modes via W key. Includes migration, reference SQL, and PRD addendum.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div id="dashboardFilters" class="caps"></div>
 			<div id="dashboardList" style="flex:1; overflow-y:auto;"></div>
 			<div id="dashboardControls" class="caps" style="padding:10px 0; border-top:1px solid #fbe293;">
-				[&larr;/&rarr;] Filter &nbsp; [&uarr;/&darr;] Scroll &nbsp; [0-6] Jump to filter &nbsp; [D/ESC] Close
+				[&larr;/&rarr;] Filter &nbsp; [&uarr;/&darr;] Scroll &nbsp; [0-6] Jump to filter &nbsp; [W] Data mode &nbsp; [D/ESC] Close
 			</div>
 		</div>
 	</div>
