--- a/index.html
+++ b/index.html
@@ -203,14 +203,13 @@
 
 	<!-- TOUCH KEYS (visible on touch devices only, fixed to bottom of viewport) -->
 	<div id="touch-keys">
-		<div class="touch-row" id="touch-row-yn">
-			<div class="keycap" id="key-y">Y</div>
-			<div class="keycap" id="key-n">N</div>
-		</div>
-		<div class="touch-row" id="touch-row-utils">
-			<div class="keycap" id="key-d">D</div>
-			<div class="keycap" id="key-help">?</div>
-		</div>
+		<div class="keycap keycap-sm" id="key-esc">ESC</div>
+		<div class="keycap keycap-sm" id="key-left">&larr;</div>
+		<div class="keycap" id="key-y">Y</div>
+		<div class="keycap" id="key-n">N</div>
+		<div class="keycap keycap-sm" id="key-right">&rarr;</div>
+		<div class="keycap keycap-sm" id="key-d">D</div>
+		<div class="keycap keycap-sm" id="key-help">?</div>
 	</div>
 
 
