Mobile: two-group touch key layout with ESC and arrow nav keys
- Left group: ESC (wide) over ⇦/⇨ arrows for dashboard navigation
- Right group: Y/N over D/? matching previous checkpoint layout
- Restore large keycap sizing (78px min, clamp 72-96px)
- All buttons always visible, no conditional show/hide

--- a/index.html
+++ b/index.html
@@ -203,13 +203,25 @@
 
 	<!-- TOUCH KEYS (visible on touch devices only, fixed to bottom of viewport) -->
 	<div id="touch-keys">
-		<div class="keycap keycap-sm" id="key-esc">ESC</div>
-		<div class="keycap keycap-sm" id="key-left">&larr;</div>
-		<div class="keycap" id="key-y">Y</div>
-		<div class="keycap" id="key-n">N</div>
-		<div class="keycap keycap-sm" id="key-right">&rarr;</div>
-		<div class="keycap keycap-sm" id="key-d">D</div>
-		<div class="keycap keycap-sm" id="key-help">?</div>
+		<div class="touch-group" id="touch-group-nav">
+			<div class="touch-row">
+				<div class="keycap keycap-wide" id="key-esc">ESC</div>
+			</div>
+			<div class="touch-row">
+				<div class="keycap" id="key-left">&#8678;</div>
+				<div class="keycap" id="key-right">&#8680;</div>
+			</div>
+		</div>
+		<div class="touch-group" id="touch-group-actions">
+			<div class="touch-row">
+				<div class="keycap" id="key-y">Y</div>
+				<div class="keycap" id="key-n">N</div>
+			</div>
+			<div class="touch-row">
+				<div class="keycap" id="key-d">D</div>
+				<div class="keycap" id="key-help">?</div>
+			</div>
+		</div>
 	</div>
 
 
