Fix ASCII art offset in pre blocks caused by whitespace: pre
Opening <p class="pre"> tag now contiguous with first art line,
closing </p> immediately after last line. Removes phantom indent
from newline + tab indentation being rendered as visible space.

--- a/index.html
+++ b/index.html
@@ -88,14 +88,12 @@
 
 			<div id="graphBox"></div>
 
-				<p class="pre">
-███████╗██████╗ ███╗   ██╗███████╗███████╗████████╗
+				<p class="pre">███████╗██████╗ ███╗   ██╗███████╗███████╗████████╗
 ██╔════╝██╔══██╗████╗  ██║██╔════╝██╔════╝╚══██╔══╝
 █████╗  ██████╔╝██╔██╗ ██║█████╗  ███████╗   ██║
 ██╔══╝  ██╔══██╗██║╚██╗██║██╔══╝  ╚════██║   ██║
 ███████╗██║  ██║██║ ╚████║███████╗███████║   ██║
-╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚══════╝   ╚═╝
-				</p>
+╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚══════╝   ╚═╝</p>
 			<p class="imgText">
 
 
@@ -142,14 +140,12 @@
 
 		<div class="infoBox">
 
-			<p class="pre">
-███████╗██████╗ ███╗   ██╗███████╗███████╗████████╗
+			<p class="pre">███████╗██████╗ ███╗   ██╗███████╗███████╗████████╗
 ██╔════╝██╔══██╗████╗  ██║██╔════╝██╔════╝╚══██╔══╝
 █████╗  ██████╔╝██╔██╗ ██║█████╗  ███████╗   ██║
 ██╔══╝  ██╔══██╗██║╚██╗██║██╔══╝  ╚════██║   ██║
 ███████╗██║  ██║██║ ╚████║███████╗███████║   ██║
-╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚══════╝   ╚═╝
-			</p>
+╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚══════╝   ╚═╝</p>
 			<p>
 				When building Ernest we were asked who gets to decide if you should be happy? What if someone else's version of happy doesn't match yours? What if bad actors train the machine's model to think disturbing content is happy?
 				<br /><br />
